[package]
name = "girolle"
version = "0.1.0"
edition = "2021"
authors = ["Philippe Llerena <philippe.llerena@gmail.com>"]
description = "a simple command line tool to list frame sequence in friendly way"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.3.1"
async-global-executor = "^2.0"
futures-lite = "2.1.0"
serde_json = "^1.0"
waker-fn = "^1.1"
tokio = { version = "1.17.0", features = ["full"] }
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
bson = "2.8.1"

[dependencies.tracing]
version = "0.1.40"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["fmt"]

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
