[package]
name = "girolle"
version = "0.1.0"
edition = "2021"
authors = ["Philippe Llerena <philippe.llerena@gmail.com>"]
description = "A nameko like lib in rust"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.3.1"
async-global-executor = "2.4.1"
futures-lite = "2.1.0"
serde_json = "1.0.108"

[dependencies.tracing]
version = "0.1.40"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["fmt"]

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
]
