[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
girolle = { path = "../girolle" }
tokio = { workspace = true }
serde_json = { workspace = true }

[[example]]
name = "advance_senders"
path = "advance_senders.rs"

[[example]]
name = "simple_sender"
path = "simple_sender.rs"

[[example]]
name = "simple_service"
path = "simple_service.rs"

[[example]]
name = "simple_macro"
path = "simple_macro.rs"
