[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies.tracing]
version = "0.1.40"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["fmt"]

[dev-dependencies]
girolle = { path = "../girolle" }
tokio = { workspace = true }
serde = { workspace = true }
rocket = { version = "0.5.1" }

[[example]]
name = "simple_sender"
path = "simple_sender.rs"

[[example]]
name = "simple_service"
path = "simple_service.rs"

[[example]]
name = "simple_macro"
path = "simple_macro.rs"

[[example]]
name = "async_test"
path = "async_test.rs"

[[example]]
name = "error_sender"
path = "error_sender.rs"

[[example]]
name = "simple_fib"
path = "simple_fib.rs"

[[example]]
name = "rocket_front"
path = "rocket_front.rs"
