[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"
# https://github.com/dependabot/dependabot-core/issues/1156
autobins = false

[dependencies.tracing]
version = "0.1.40"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["fmt"]

[dev-dependencies]
girolle = { path = "../girolle" }
tokio = { workspace = true }
serde = { workspace = true }

[[example]]
name = "simple_sender"
path = "src/simple_sender.rs"

[[example]]
name = "simple_service"
path = "src/simple_service.rs"

[[example]]
name = "simple_macro"
path = "src/simple_macro.rs"

[[example]]
name = "async_test"
path = "src/async_test.rs"

[[example]]
name = "error_sender"
path = "src/error_sender.rs"

[[example]]
name = "simple_fib"
path = "src/simple_fib.rs"
