[package]
name = "girolle"
version = "1.3.0"
edition = "2021"
authors = ["Philippe Llerena <philippe.llerena@gmail.com>"]
description = "A nameko like lib in rust"
readme = "../README.md"
license-file = "../LICENSE"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.3.1"
async-global-executor = "2.4.1"
serde_json = "1.0.108"
serde = { version = "1.0.196", features = ["derive"] }
futures = "0.3.30"
girolle_macro = { path = "../girolle_macro", version = "1.2" }

[dependencies.tracing]
version = "0.1.40"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["fmt"]

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
]

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
criterion = "0.5"

[[bench]]
name = "macro"
harness = false
