[package]
name = "girolle"
version = "1.7.2"
edition = "2021"
authors = ["Philippe Llerena <philippe.llerena@gmail.com>"]
description = "A nameko like lib in rust"
readme = "../README.md"
license-file = "../LICENSE"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.3.4"
serde_json = { workspace = true }
serde = { version = "1.0.202", features = ["derive", "rc"] }
futures = "0.3.30"
girolle_macro = { path = "../girolle_macro", version = "1.7" }
tokio = { workspace = true }
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
serde_yaml = "0.9"
regex = "1.10.4"

[dependencies.tracing]
version = "0.1.40"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["fmt"]

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "macro"
harness = false
