[package]
name = "girolle"
version = { workspace = true }
edition = "2021"
authors = ["Philippe Llerena <philippe.llerena@gmail.com>"]
description = "A nameko like lib in rust"
readme = "../README.md"
license-file = "../LICENSE"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.5.3"
futures = "0.3.31"
girolle_macro = { path = "../girolle_macro", version = "2" }
tokio-executor-trait = "2.1.3"
tokio-reactor-trait = "1.1.0"
serde_yaml = "0.9.34+deprecated"
regex = "1.11.1"
dashmap = "6.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dependencies.tracing]
version = "0.1.41"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["fmt"]

[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "macro"
harness = false
