[package]
name = "girolle_macro"
version = "1.3.0"
edition = "2021"
readme = "../README.md"
license-file = "../LICENSE"
description = "A nameko macro proc-macro to generate a Nameko Function"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["fold", "full"] }
serde_json = "1.0.113"

[dev-dependencies]
