[package]
name = "girolle_macro"
version = "1.6.2"
edition = "2021"
readme = "../README.md"
license-file = "../LICENSE"
description = "A nameko macro proc-macro to generate a Nameko Function"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.83"
quote = "1.0.36"
syn = { version = "2.0.65", features = ["fold", "full"] }
serde_json = { workspace = true }

[dev-dependencies]
