[package]
name = "girolle_macro"
version = "1.8.3"
edition = "2021"
readme = "../README.md"
license-file = "../LICENSE"
description = "A nameko macro proc-macro to generate a Nameko Function"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.90", features = ["fold", "full"] }
serde_json = { workspace = true }

[dev-dependencies]
